automate/TD2/y.output
État 10 conflits: 1 décalage/réduction


Grammaire

    0 $accept: ligne $end

    1 ligne: init polynome ';'
    2      | polynome ';'

    3 polynome: polynome '+' multiplication
    4         | polynome '-' multiplication
    5         | multiplication

    6 multiplication: multiplication '*' terme
    7               | multiplication '^' terme
    8               | multiplication '/' terme
    9               | terme

   10 terme: '(' polynome ')'
   11      | '-' terme
   12      | REAL 'X' '^' terme
   13      | 'X'
   14      | REAL 'X'
   15      | REAL

   16 init: 'X' '=' terme ';'


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 10
')' (41) 10
'*' (42) 6
'+' (43) 3
'-' (45) 4 11
'/' (47) 8
';' (59) 1 2 16
'=' (61) 16
'X' (88) 12 13 14 16
'^' (94) 7 12
error (256)
REAL (258) 12 14 15


Non-terminaux, suivis des règles où ils apparaissent

$accept (14)
    à gauche: 0
ligne (15)
    à gauche: 1 2, à droite: 0
polynome (16)
    à gauche: 3 4 5, à droite: 1 2 3 4 10
multiplication (17)
    à gauche: 6 7 8 9, à droite: 3 4 5 6 7 8
terme (18)
    à gauche: 10 11 12 13 14 15, à droite: 6 7 8 9 11 12 16
init (19)
    à gauche: 16, à droite: 1


État 0

    0 $accept: . ligne $end

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 4

    ligne           aller à l'état 5
    polynome        aller à l'état 6
    multiplication  aller à l'état 7
    terme           aller à l'état 8
    init            aller à l'état 9


État 1

   12 terme: REAL . 'X' '^' terme
   14      | REAL . 'X'
   15      | REAL .

    'X'  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 15 (terme)


État 2

   11 terme: '-' . terme

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 11

    terme  aller à l'état 12


État 3

   10 terme: '(' . polynome ')'

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 11

    polynome        aller à l'état 13
    multiplication  aller à l'état 7
    terme           aller à l'état 8


État 4

   13 terme: 'X' .
   16 init: 'X' . '=' terme ';'

    '='  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 13 (terme)


État 5

    0 $accept: ligne . $end

    $end  décalage et aller à l'état 15


État 6

    2 ligne: polynome . ';'
    3 polynome: polynome . '+' multiplication
    4         | polynome . '-' multiplication

    ';'  décalage et aller à l'état 16
    '+'  décalage et aller à l'état 17
    '-'  décalage et aller à l'état 18


État 7

    5 polynome: multiplication .
    6 multiplication: multiplication . '*' terme
    7               | multiplication . '^' terme
    8               | multiplication . '/' terme

    '*'  décalage et aller à l'état 19
    '^'  décalage et aller à l'état 20
    '/'  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 5 (polynome)


État 8

    9 multiplication: terme .

    $défaut  réduction par utilisation de la règle 9 (multiplication)


État 9

    1 ligne: init . polynome ';'

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 11

    polynome        aller à l'état 22
    multiplication  aller à l'état 7
    terme           aller à l'état 8


État 10

   12 terme: REAL 'X' . '^' terme
   14      | REAL 'X' .

    '^'  décalage et aller à l'état 23

    '^'       [réduction par utilisation de la règle 14 (terme)]
    $défaut  réduction par utilisation de la règle 14 (terme)


État 11

   13 terme: 'X' .

    $défaut  réduction par utilisation de la règle 13 (terme)


État 12

   11 terme: '-' terme .

    $défaut  réduction par utilisation de la règle 11 (terme)


État 13

    3 polynome: polynome . '+' multiplication
    4         | polynome . '-' multiplication
   10 terme: '(' polynome . ')'

    '+'  décalage et aller à l'état 17
    '-'  décalage et aller à l'état 18
    ')'  décalage et aller à l'état 24


État 14

   16 init: 'X' '=' . terme ';'

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 11

    terme  aller à l'état 25


État 15

    0 $accept: ligne $end .

    $défaut  accepter


État 16

    2 ligne: polynome ';' .

    $défaut  réduction par utilisation de la règle 2 (ligne)


État 17

    3 polynome: polynome '+' . multiplication

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 11

    multiplication  aller à l'état 26
    terme           aller à l'état 8


État 18

    4 polynome: polynome '-' . multiplication

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 11

    multiplication  aller à l'état 27
    terme           aller à l'état 8


État 19

    6 multiplication: multiplication '*' . terme

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 11

    terme  aller à l'état 28


État 20

    7 multiplication: multiplication '^' . terme

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 11

    terme  aller à l'état 29


État 21

    8 multiplication: multiplication '/' . terme

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 11

    terme  aller à l'état 30


État 22

    1 ligne: init polynome . ';'
    3 polynome: polynome . '+' multiplication
    4         | polynome . '-' multiplication

    ';'  décalage et aller à l'état 31
    '+'  décalage et aller à l'état 17
    '-'  décalage et aller à l'état 18


État 23

   12 terme: REAL 'X' '^' . terme

    REAL  décalage et aller à l'état 1
    '-'   décalage et aller à l'état 2
    '('   décalage et aller à l'état 3
    'X'   décalage et aller à l'état 11

    terme  aller à l'état 32


État 24

   10 terme: '(' polynome ')' .

    $défaut  réduction par utilisation de la règle 10 (terme)


État 25

   16 init: 'X' '=' terme . ';'

    ';'  décalage et aller à l'état 33


État 26

    3 polynome: polynome '+' multiplication .
    6 multiplication: multiplication . '*' terme
    7               | multiplication . '^' terme
    8               | multiplication . '/' terme

    '*'  décalage et aller à l'état 19
    '^'  décalage et aller à l'état 20
    '/'  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 3 (polynome)


État 27

    4 polynome: polynome '-' multiplication .
    6 multiplication: multiplication . '*' terme
    7               | multiplication . '^' terme
    8               | multiplication . '/' terme

    '*'  décalage et aller à l'état 19
    '^'  décalage et aller à l'état 20
    '/'  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 4 (polynome)


État 28

    6 multiplication: multiplication '*' terme .

    $défaut  réduction par utilisation de la règle 6 (multiplication)


État 29

    7 multiplication: multiplication '^' terme .

    $défaut  réduction par utilisation de la règle 7 (multiplication)


État 30

    8 multiplication: multiplication '/' terme .

    $défaut  réduction par utilisation de la règle 8 (multiplication)


État 31

    1 ligne: init polynome ';' .

    $défaut  réduction par utilisation de la règle 1 (ligne)


État 32

   12 terme: REAL 'X' '^' terme .

    $défaut  réduction par utilisation de la règle 12 (terme)


État 33

   16 init: 'X' '=' terme ';' .

    $défaut  réduction par utilisation de la règle 16 (init)
